--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <color name="colorNavBar">#323232</color>
     <color name="colorFragment">#222222</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="noColor">#00FFFFFF</color>
 
     <string name="minTemp">Minimum Temp</string>
     <string name="maxTemp">Maximum Temp</string>
