--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="minTempText">Min Temp:</string>
     <string name="maxTempNum">Max Temp:</string>
     <string name="currentRun">Current Run</string>
+    <string name="title_activity_reader">ReaderActivity</string>
 </resources>
